test/fail_compilation/gag4269b.d
// REQUIRED_ARGS: -c -o-

static if(is(typeof(X2.init))) {}
struct X2 { Y y; }

 